@@ -5,34 +5,23 @@ import backend.model.Figure;
 
 import javafx.scene.paint.Color;
 
-public class ChangeBorderColor extends ActionForFormat {
-
-    public ChangeBorderColor(Figure figure, Color currentColor, Color nextColor, CanvasState canvasState) {
-        super(figure, currentColor, canvasState);
+public class ChangeBorderColor extends ChangeColor {
+    public ChangeBorderColor(Figure figure, Color newColor, CanvasState canvasState){
+        super(figure, figure.getBorderColor(), newColor, canvasState);
     }
 
     @Override
-    public void undoAction() {
-        changeColor(previousColor);
+    public void changeColor(Color color) {
+        getCanvasState().findFigure(getFigure()).setBorderColor(color);
     }
 
     @Override
-    public void activateAction(){
-        previousColor=figure.getBorderColor();
-        super.activateAction();
-    }
-
-    @Override
-    public void changeColor(Color color){
-        for( Figure selection : canvasState.figures()){
-            if(selection == figure){
-                selection.setBorderColor(color);
-            }
-        }
+    public Color getPreviousColor() {
+        return getFigure().getBorderColor();
     }
 
     @Override
     public String toString() {
-        return super.toString()+"%s border".formatted(figure.getFigureName());
+        return String.format("%s del borde de %s", super.toString(), getFigure().getFigureType());
     }
 }
